# catering-calculator

./: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.tauri/: catering-calculator.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  paste.rs  snap.rs
src/utils/: calculator.ts
